--- a/CSS/media.css
+++ b/CSS/media.css
@@ -49,7 +49,7 @@
       border-top:2px solid #0065fc;
       border-bottom: none;
       color:#deebff;
-      background-color:#deebff ;
+      
       }
       .header__menu__list__hoover
   {
@@ -101,6 +101,11 @@
   {
       margin-right:2rem;
   }
+  .filters__contenaire__button
+  {
+    margin-right:1rem;
+}
+  }
       /************************************main***********************************************/
     .global_hebergement
     {
@@ -120,8 +125,6 @@
     }
         .hebergement
         {
-            display:grid;
-            justify-content: stretch;
             background-color: #f2f2f2;
             border-radius: 10px;
             border: 1px #f2f2f2 solid;
@@ -163,7 +166,7 @@
                 margin:0;
                 width:auto;
                 height: auto;
-                max-width:none;
+                max-width: none;
             }
 
 /***********************************activity********************************/
@@ -177,39 +180,38 @@
     display:grid;
     grid-template-columns:repeat(4,1fr);
     grid-template-rows: repeat(10,2rem);
-
     grid-gap:1rem;
     margin-bottom:1rem; 
     
    
 }
-    .carda
+    .activity__article :nth-child(1)
     {
         grid-row: 1/11;
         grid-column: 1;
     }
     
-    .cardb
+    .activity__article :nth-child(2)
     {
         grid-row: 1/7;
         grid-column: 2;
     }
-    .carde
+    .activity__article :nth-child(5)
     {
         grid-row: 7/11;
         grid-column: 2;
     }
-    .cardd
+    .activity__article :nth-child(4)
     {
-        grid-row: 1/-1;
+        grid-row: 1/11;
         grid-column: 3;
     }
-    .cardc
+    .activity__article :nth-child(3)
     {
         grid-row: 1/6;
         grid-column: 4;
     }
-    .cardf
+    .activity__article :nth-child(6)
     {
         grid-row: 6/11;
         grid-column: 4;
@@ -218,20 +220,36 @@
         {
         
         display:grid;
-        grid-template-rows:auto min-content;
-        
-            
+        grid-template-rows:auto min-content; 
+                  
         }
-        .card3_contenaire
+        .card3 :nth-child(1)
         {
-            /*min-height: 0%;*/
+            grid-row: initial;
+            grid-column: initial;
         }
+        .card3 :nth-child(2)
+        {
+            grid-row: initial;
+            grid-column: initial;
+        }
+
+        .card3 h3{padding-bottom:0rem;}
+        /*.card3_contenaire
+        {
+            min-height: 0%;
+            border: 1px solid black;
+        }*/
+
+        .imL{max-height: 14rem;}
+        .imS{max-height: 11rem;}
+        .imXS{max-height: 8rem;}
         
         .card3 img
             {                
-            /*height:100%;
-            /*overflow:hidden;*/
-                    
+            height:90%;
+            /*min-height:0;*/
+                              
             }
     /*************************************footer************************************/
     footer
@@ -246,7 +264,7 @@
         }
 }
 
- @media screen and (min-width: 600px) and (max-width: 1189px)
+ @media screen and (min-width: 600px) and (max-width: 1199px)
  {
  
  
@@ -282,27 +300,24 @@
         }
                 .card2
             {
-                
+                width:20rem;
                 margin-right:1rem
             }
-    
-            .activity__article{
-                grid-template-columns: 1fr 1fr;
-                grid-auto-flow: dense;
-            }
-    
-            footer
-            {
-                grid-area:footer;
-                display:grid;
-                grid-template-columns: repeat(3,1fr);
-                background-color: #f2f2f2;
-                padding:2rem 2rem 2rem 3.2rem;
-                line-height: 2rem;
-    
-            }
-    }
-    
+        .activity__article{
+            grid-template-columns: 1fr 1fr;
+            grid-auto-flow: dense;
+        }
+
+        footer
+        {
+            grid-area:footer;
+            display:grid;
+            grid-template-columns: repeat(3,1fr);
+            background-color: #f2f2f2;
+            padding:2rem 2rem 2rem 3.2rem;
+            line-height: 2rem;
+
+        }
 }
  
  
