--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,8 +19,8 @@ body /*inheritance*/
     
     
 }
-em{font-weight:bold;}
 
+em{font-weight: bold;}
 a:link, a:visited
 { 
  text-decoration:none; 
@@ -98,6 +98,7 @@ img
   {
   border-bottom:1px solid #0065fc;
   border-top:0;
+  background-color:#deebff;
   
   }
   .header__menu div
@@ -272,7 +273,7 @@ img
 {
     grid-area:global_hebergement;
     display:grid;
-    grid-template-rows:repeat(auto-fill,1fr);
+    grid-template-rows:repeat(auto,1fr);
     line-height: 1.5rem;
     
 }
@@ -393,7 +394,7 @@ img
             {
                 display: flex;
                 flex-wrap: wrap;
-                justify-content: space-around;
+                justify-content: center;
             }
             .card2
             {
@@ -406,7 +407,7 @@ img
             box-shadow:2px 2px 6px rgb(206, 204, 204) ;
             padding:0.4rem;
             cursor: pointer;
-            max-width:21rem;
+            max-width: 21rem;
             
             }
               
@@ -445,8 +446,7 @@ img
     
         border-radius: 10px;
         box-shadow:2px 2px 6px rgb(206, 204, 204) ; 
-        cursor: pointer;
-            
+        
                    
             
         }
@@ -455,8 +455,12 @@ img
         .card3 h3
         {
             margin:0.75rem;
+            padding-bottom:0.75rem;
         }
-        
+        .card3 :nth-child()
+        {
+            flex-shrink:3;
+        }
                 .card3 img
                 {
                     border-radius: 10px 10px 0 00px;        
