--- a/CSS/style.css
+++ b/CSS/style.css
@@ -268,6 +268,7 @@ button {
   justify-content: space-evenly;
 }
 .card1 /*hebergement*/ {
+    display:flex;
   margin-bottom: 1rem;
   border-radius: 20px;
   box-shadow: 2px 2px 6px rgb(206, 204, 204);
@@ -278,7 +279,12 @@ button {
   width: 20.5rem;
   
 }
+.ajust
+{
+    display:grid;
+    grid-template-rows:7rem 1fr;
 
+}
 .card1__thumb /*mise en forme image card hebergement*/ {
   border-radius: 15px 15px 0 0; /*ajusté*/
   padding-bottom: 0.4rem; /*ajusté*/
@@ -286,7 +292,7 @@ button {
 }
 .card1__thumb__img {
   width: 100%;
-  height: 7rem;
+  height: 100%;
   border-radius: 15px 15px 0 0;
 }
 
